--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 
   <!-- Video Overlay -->
   <div id="portal-overlay">
-    <video id="portal-video" src="portal.mp4" autoplay muted playsinline></video>
+    <video id="portal-video" src="netherportaleffect.mp4" autoplay muted playsinline></video>
   </div>
 
   <nav class="navbar">
