--- a/plans.html
+++ b/plans.html
@@ -19,6 +19,7 @@
       margin: 0;
       font-family: 'Inter', sans-serif;
       color: var(--text);
+      background: var(--background);
     }
 
     /* Dark overlay on top of video */
@@ -39,7 +40,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
-      z-index: -2; /* Push video behind everything */
+      z-index: -2;
     }
 
     main {
@@ -49,26 +50,61 @@
       flex-direction: column;
     }
 
+    /* Back Button */
+    .back-button {
+      position: fixed;
+      top: 20px;
+      left: 20px;
+      background: rgba(0, 0, 0, 0.6);
+      border: 1px solid var(--highlight);
+      color: var(--highlight);
+      padding: 0.6rem 1.2rem;
+      border-radius: 8px;
+      font-size: 1rem;
+      text-decoration: none;
+      transition: background 0.3s, color 0.3s, transform 0.2s;
+      z-index: 10;
+    }
+    .back-button:hover {
+      background: var(--highlight);
+      color: #fff;
+      transform: scale(1.05);
+    }
+
+    /* Modernized Header */
     header {
+      padding: 5rem 1rem 4rem;
       text-align: center;
-      padding: 6rem 1rem 3rem;
-      border-bottom: 1px solid #222;
+      background: linear-gradient(to bottom, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0));
+      position: relative;
     }
 
     .header-content {
-      position: relative;
-      z-index: 1;
+      display: inline-block;
+      background: rgba(0, 0, 0, 0.5);
+      padding: 2rem 3rem;
+      border-radius: 16px;
+      backdrop-filter: blur(6px);
+      box-shadow: 0 4px 30px rgba(0, 0, 0, 0.4);
+      animation: fadeIn 1s ease forwards;
     }
 
     header h1 {
       font-size: 3rem;
       margin-bottom: 0.5rem;
       color: var(--highlight);
+      text-shadow: 0 0 8px rgba(199, 125, 255, 0.8);
     }
 
     header p {
-      font-size: 1.2rem;
-      color: #ccc;
+      font-size: 1.3rem;
+      color: #ddd;
+      margin: 0;
+    }
+
+    @keyframes fadeIn {
+      0% { opacity: 0; transform: translateY(20px); }
+      100% { opacity: 1; transform: translateY(0); }
     }
 
     /* Plans Section */
@@ -156,6 +192,12 @@
     a {
       text-decoration: none;
     }
+
+    @media (max-width: 600px) {
+      header h1 { font-size: 2rem; }
+      header p { font-size: 1rem; }
+      .header-content { padding: 1.5rem 2rem; }
+    }
   </style>
 </head>
 <body>
@@ -163,6 +205,9 @@
   <video autoplay loop muted playsinline class="background-video">
     <source src="MCShaders.mp4" type="video/mp4" />
   </video>
+
+  <!-- Back Button -->
+  <a href="javascript:history.back()" class="back-button">← Back</a>
 
   <main>
     <header>
