--- a/plans.html
+++ b/plans.html
@@ -55,7 +55,7 @@
       position: fixed;
       top: 20px;
       left: 20px;
-      background: rgba(0, 0, 0, 0.6);
+      background: var(--card);
       border: 1px solid var(--highlight);
       color: var(--highlight);
       padding: 0.6rem 1.2rem;
@@ -75,16 +75,14 @@
     header {
       padding: 5rem 1rem 4rem;
       text-align: center;
-      background: linear-gradient(to bottom, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0));
       position: relative;
     }
 
     .header-content {
       display: inline-block;
-      background: rgba(0, 0, 0, 0.5);
+      background: var(--card);
       padding: 2rem 3rem;
       border-radius: 16px;
-      backdrop-filter: blur(6px);
       box-shadow: 0 4px 30px rgba(0, 0, 0, 0.4);
       animation: fadeIn 1s ease forwards;
     }
@@ -98,7 +96,7 @@
 
     header p {
       font-size: 1.3rem;
-      color: #aaa;
+      color: #ddd;
       margin: 0;
     }
 
