--- a/index.html
+++ b/index.html
@@ -58,71 +58,140 @@
       box-shadow: 0 0 26px #6a0dad;
     }
 
+    /* Modern Navbar */
     .navbar {
       position: fixed;
       top: 0;
       width: 100%;
-      background-color: #1e1e1e;
-      padding: 0.75rem 2rem;
+      background: rgba(30, 30, 30, 0.95);
+      backdrop-filter: blur(10px);
+      padding: 0.5rem 2rem;
       z-index: 1000;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.5);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.3);
+      transition: background 0.3s ease, padding 0.3s ease;
+      transform: translateY(-100%);
+      opacity: 0;
+      animation: slideInNav 0.8s ease forwards;
     }
+
+    @keyframes slideInNav {
+      0% {
+        transform: translateY(-100%);
+        opacity: 0;
+      }
+      100% {
+        transform: translateY(0);
+        opacity: 1;
+      }
+    }
+
+    .navbar.scrolled {
+      background: rgba(20, 20, 20, 0.98);
+      padding: 0.25rem 2rem;
+    }
+
     .navbar-container {
       max-width: 1200px;
-      margin: 0 auto;
+      width: 100%;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      gap: 1rem;
     }
+
     .navbar-logo a {
-      font-size: 1.5rem;
+      font-size: 1.8rem;
       font-weight: 700;
       color: #C084FC;
       text-decoration: none;
+      transition: color 0.3s;
     }
+    .navbar-logo a:hover {
+      color: #fff;
+    }
+
+    .navbar-links {
+      display: flex;
+      gap: 2rem;
+      align-items: center;
+      transition: transform 0.3s ease, opacity 0.3s ease;
+    }
+
+    .navbar-links a {
+      color: #C084FC;
+      text-decoration: none;
+      font-weight: 600;
+      position: relative;
+      padding: 0.3rem 0;
+      transition: color 0.3s ease;
+    }
+
+    .navbar-links a::after {
+      content: "";
+      position: absolute;
+      width: 100%;
+      height: 2px;
+      background: #C084FC;
+      left: 0;
+      bottom: 0;
+      transform: scaleX(0);
+      transform-origin: right;
+      transition: transform 0.3s ease;
+    }
+
+    .navbar-links a:hover::after {
+      transform: scaleX(1);
+      transform-origin: left;
+    }
+
+    .navbar-links a:hover {
+      color: #fff;
+    }
+
     .navbar-server {
-      flex: 1;
-      text-align: center;
+      margin-right: 2rem;
       color: #C084FC;
       font-weight: 600;
       cursor: pointer;
       transition: color 0.3s;
     }
     .navbar-server:hover { color: #ffffff; }
-    .navbar-links { display: flex; gap: 1.5rem; }
-    .navbar-links a {
-      color: #C084FC;
-      text-decoration: none;
-      font-weight: 600;
-      transition: color 0.3s;
-    }
-    .navbar-links a:hover { color: #ffffff; }
+
     .navbar-toggle {
       display: none;
-      font-size: 1.5rem;
+      font-size: 1.8rem;
       color: #C084FC;
       cursor: pointer;
+      transition: transform 0.3s ease;
     }
+    .navbar-toggle:hover {
+      transform: rotate(90deg);
+    }
+
     @media (max-width: 768px) {
-      .navbar-container { flex-wrap: wrap; }
-      .navbar-server {
-        width: 100%;
-        margin-top: 0.5rem;
-      }
       .navbar-links {
         position: absolute;
-        top: 60px;
+        top: 70px;
         right: 2rem;
-        background-color: #1e1e1e;
+        background: rgba(30,30,30,0.95);
         flex-direction: column;
-        gap: 1rem;
-        padding: 1rem;
-        display: none;
-        border-radius: 8px;
+        gap: 1.5rem;
+        padding: 1.5rem;
+        border-radius: 10px;
+        transform: translateY(-20px);
+        opacity: 0;
+        pointer-events: none;
       }
-      .navbar-links.show { display: flex; }
-      .navbar-toggle { display: block; }
+      .navbar-links.show {
+        transform: translateY(0);
+        opacity: 1;
+        pointer-events: auto;
+      }
+      .navbar-toggle {
+        display: block;
+      }
     }
 
     header {
@@ -135,6 +204,7 @@
       color: #fff;
       margin-top: 60px;
       overflow: hidden;
+      text-align: left;
     }
     header img.header-bg {
       position: absolute;
@@ -161,6 +231,30 @@
       flex: 1 1 50%;
       padding-right: 2rem;
     }
+    .header-left h1,
+    .header-left h2,
+    .header-left p,
+    .header-left .cta-button {
+      opacity: 0;
+      transform: translateY(30px);
+      animation: fadeInUpHeader 0.8s ease forwards;
+    }
+    .header-left h1 { animation-delay: 0.3s; }
+    .header-left h2 { animation-delay: 0.6s; }
+    .header-left p { animation-delay: 0.9s; }
+    .header-left .cta-button { animation-delay: 1.2s; }
+
+    @keyframes fadeInUpHeader {
+      0% {
+        opacity: 0;
+        transform: translateY(30px);
+      }
+      100% {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
     .header-left h1 {
       font-size: 3.5rem;
       color: #C084FC;
@@ -241,12 +335,34 @@
       font-size: 1.8rem;
       color: var(--highlight);
       margin-bottom: 1rem;
+      cursor: pointer;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
     .about-section p {
       font-size: 1rem;
       line-height: 1.6;
       color: #ddd;
     }
+
+    /* Dropdown styles */
+    .dropdown-content {
+      max-height: 0;
+      overflow: hidden;
+      transition: max-height 0.5s ease;
+    }
+    .dropdown-content.open {
+      max-height: 2000px;
+    }
+    .arrow {
+      display: inline-block;
+      transition: transform 0.3s ease;
+    }
+    .arrow.rotate {
+      transform: rotate(180deg);
+    }
+
     footer a {
       color: #9b5de5;
       text-decoration: none;
@@ -297,7 +413,7 @@
     <video id="portal-video" src="netherportaleffect.mp4" autoplay muted playsinline></video>
   </div>
 
-  <nav class="navbar">
+  <nav class="navbar" id="navbar">
     <div class="navbar-container">
       <div class="navbar-logo"><a href="#home">VoidedMC</a></div>
       <div class="navbar-server" onclick="copyToClipboard('Play.Voidedmc.net')">Official MC Server: Play.Voidedmc.net</div>
@@ -351,88 +467,84 @@
         VoidedMC is all about giving everyone a chance to build, play, and create their own worlds, whether you're just starting out or running a big community. Thanks for checking us out! I can’t wait to see what you create!</p>
     </div>
     <div class="about-section">
-      <h3>For the Nerds!</h3>
-      <section>
-  <p>
-    We believe in being as open and honest as possible.
-  </p>
+      <h3 onclick="toggleDropdown()">
+        For the Nerds!
+        <span class="arrow" id="nerds-arrow">▼</span>
+      </h3>
+      <section class="dropdown-content" id="nerds-dropdown">
+        <p>
+          We believe in being as open and honest as possible.
+        </p>
 
-  <p>
-    Unlike many hosting providers, we want you to know exactly what powers our services.
-  </p>
+        <p>
+          Unlike many hosting providers, we want you to know exactly what powers our services.
+        </p>
 
-  <p>
-    Yes, we know, the free tier specifications are nothing to write home about. But they’re perfect for running lots of lightweight Minecraft servers.
-  </p>
+        <p>
+          Yes, we know, the free tier specifications are nothing to write home about. But they’re perfect for running lots of lightweight Minecraft servers.
+        </p>
 
-  <p>
-    Our <strong>paid tier</strong>, on the other hand, is backed by much more powerful hardware, offering significantly better performance and reliability.
-  </p>
+        <p>
+          Our <strong>paid tier</strong>, on the other hand, is backed by much more powerful hardware, offering significantly better performance and reliability.
+        </p>
 
-  <p>
-    Here’s a full breakdown of our infrastructure:
-  </p>
+        <p>
+          Here’s a full breakdown of our infrastructure:
+        </p>
 
-  <h3 style="margin-top: 40px;">Free Tier - Dell R720</h3>
-   
-  <p><strong style="color:#9cdefc;">Processors:</strong></p>
-  <ul>
-    <li>Dual Intel E5-2690</li>
-    <li>8 cores / 16 threads per CPU (Total: 16 cores / 32 threads)</li>
-    <li>Base Clock Speed: 2.9 GHz</li>
-    <li>Max Turbo Frequency: Up to 3.8 GHz</li>
-  </ul>
+        <h3 style="margin-top: 40px;">Free Tier - Dell R720</h3>
+        
+        <p><strong style="color:#9cdefc;">Processors:</strong></p>
+        <ul>
+          <li>Dual Intel E5-2690</li>
+          <li>8 cores / 16 threads per CPU (Total: 16 cores / 32 threads)</li>
+          <li>Base Clock Speed: 2.9 GHz</li>
+          <li>Max Turbo Frequency: Up to 3.8 GHz</li>
+        </ul>
 
-  <p><strong style="color:#9cdefc;">Memory:</strong></p>
-  <ul>
-    <li>Total RAM: 196 GB DDR3 ECC Registered</li>
-    <li>RAM Speed: 2300 MHz</li>
-  </ul>
+        <p><strong style="color:#9cdefc;">Memory:</strong></p>
+        <ul>
+          <li>Total RAM: 196 GB DDR3 ECC Registered</li>
+          <li>RAM Speed: 2300 MHz</li>
+        </ul>
 
-  <p><strong style="color:#9cdefc;">Storage:</strong></p>
-  <ul>
-    <li>RAID 5 – SSD</li>
-  </ul>
+        <p><strong style="color:#9cdefc;">Storage:</strong></p>
+        <ul>
+          <li>RAID 5 – SSD</li>
+        </ul>
 
-  <ul> </ul>
-  <h3 style="margin-top: 40px;">Paid Tier – Custom High-Performance Nodes</h3>
+        <ul> </ul>
+        <h3 style="margin-top: 40px;">Paid Tier – Custom High-Performance Nodes</h3>
 
-  <p><strong style="color:#ffb380;">Processors:</strong></p>
-  <ul>
-    <li>Intel i9-9900k</li>
-    <li>8 cores / 16 threads</li>
-    <li>Base Clock Speed: 3.1 GHz</li>
-    <li>Max Boost Clock: Up to 5.0 GHz</li>
-  </ul>
- <ul>&</ul>
- <ul>
-    <li>Intel W-1290P</li>
-    <li>10 cores / 20 threads</li>
-    <li>Base Clock Speed: 3.7 GHz</li>
-    <li>Max Boost Clock: Up to 5.3 GHz</li>
-  </ul> 
-  <p><strong style="color:#ffb380;">Memory:</strong></p>
-  <ul>
-    <li>Total RAM: 64 GB DDR4</li>
-    <li>RAM Speed: 3200 MHz</li>
-  </ul>
+        <p><strong style="color:#ffb380;">Processors:</strong></p>
+        <ul>
+          <li>Intel i9-9900k</li>
+          <li>8 cores / 16 threads</li>
+          <li>Base Clock Speed: 3.1 GHz</li>
+          <li>Max Boost Clock: Up to 5.0 GHz</li>
+        </ul>
+        <ul>&</ul>
+        <ul>
+          <li>Intel W-1290P</li>
+          <li>10 cores / 20 threads</li>
+          <li>Base Clock Speed: 3.7 GHz</li>
+          <li>Max Boost Clock: Up to 5.3 GHz</li>
+        </ul> 
+        <p><strong style="color:#ffb380;">Memory:</strong></p>
+        <ul>
+          <li>Total RAM: 64 GB DDR4</li>
+          <li>RAM Speed: 3200 MHz</li>
+        </ul>
 
-  <p><strong style="color:#ffb380;">Storage:</strong></p>
-  <ul>
-    <li>Gen 4 NVMe SSDs</li>
-  </ul>
-</section>
-<!-- Footer -->
-<style>
-  footer a {
-    color: #9b5de5;
-    text-decoration: none;
-  }
+        <p><strong style="color:#ffb380;">Storage:</strong></p>
+        <ul>
+          <li>Gen 4 NVMe SSDs</li>
+        </ul>
+      </section>
+    </div>
+  </section>
 
-  footer a:hover {
-    text-decoration: underline;
-  }
-</style>
+  <!-- Footer -->
   <footer>&copy; 2025 VoidedMC. All rights reserved.<br><a href="/terms.html">Terms of Service</a></footer>
 
   <script>
@@ -440,7 +552,29 @@
       navigator.clipboard.writeText(text).then(() => alert('Server IP copied: ' + text));
     }
 
-    // entrance animations
+    function toggleDropdown() {
+      const dropdown = document.getElementById('nerds-dropdown');
+      const arrow = document.getElementById('nerds-arrow');
+      dropdown.classList.toggle('open');
+      arrow.classList.toggle('rotate');
+    }
+
+    // Navbar scroll behavior
+    const navbar = document.getElementById('navbar');
+    window.addEventListener('scroll', () => {
+      if (window.scrollY > 50) {
+        navbar.classList.add('scrolled');
+      } else {
+        navbar.classList.remove('scrolled');
+      }
+    });
+
+    // Navbar toggle
+    document.getElementById('nav-toggle').addEventListener('click', () => {
+      document.getElementById('nav-links').classList.toggle('show');
+    });
+
+    // Entrance animations
     const observer = new IntersectionObserver(entries => {
       entries.forEach(e => {
         if (e.isIntersecting) e.target.classList.add('animate');
