--- a/index.html
+++ b/index.html
@@ -285,6 +285,32 @@
       transform: scale(1.05);
     }
 
+    /* Down Arrow */
+    .down-arrow {
+      position: absolute;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
+      cursor: pointer;
+      animation: bounce 1.5s infinite;
+      transition: transform 0.3s ease;
+    }
+    .down-arrow svg {
+      width: 40px;
+      height: 40px;
+      fill: white;
+      transition: filter 0.3s ease, transform 0.3s ease;
+    }
+    .down-arrow:hover svg {
+      filter: drop-shadow(0 0 10px #9b5de5);
+      transform: scale(1.2);
+    }
+    @keyframes bounce {
+      0%, 20%, 50%, 80%, 100% { transform: translate(-50%, 0); }
+      40% { transform: translate(-50%, -10px); }
+      60% { transform: translate(-50%, -5px); }
+    }
+
     .features {
       display: flex;
       justify-content: center;
@@ -432,6 +458,12 @@
         <a href="plans.html" class="cta-button" id="start-btn">Get Started Now</a>
       </div>
     </div>
+    <!-- Down Arrow -->
+    <a href="#about" class="down-arrow">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+        <path d="M12 16l-6-6h12z"/>
+      </svg>
+    </a>
   </header>
 
   <!-- Features Section -->
@@ -575,13 +607,6 @@
       });
     }, { threshold: 0.1 });
     document.querySelectorAll('.feature-card, .about-section').forEach(el => observer.observe(el));
-
-      // HIDE OVERLAY WHEN VIDEO ENDS
-      video.addEventListener('ended', () => {
-        overlay.classList.remove('active');
-        window.location.href = this.href;
-      }, { once: true });
-    });
   </script>
 </body>
 </html>
