--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
     </div>
     <div class="about-section">
       <h3 onclick="toggleDropdown()">
-        For the Nerds!
+        For the Nerds! (Hardware)
         <span class="arrow" id="nerds-arrow">▼</span>
       </h3>
       <section class="dropdown-content" id="nerds-dropdown">
