--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
     }
     .about-section h3 {
       font-size: 1.8rem;
-      color: var(--highlight);
+      color: #c77dff;
       margin-bottom: 1rem;
       cursor: pointer;
       display: flex;
@@ -494,7 +494,7 @@
     </div>
     <div class="about-section">
       <h3 onclick="toggleDropdown()">
-        For the Nerds! (Hardware)
+        For The Nerds! (Hardware)
         <span class="arrow" id="nerds-arrow">▼</span>
       </h3>
       <section class="dropdown-content" id="nerds-dropdown">
