--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
       <div class="navbar-links" id="nav-links">
         <a href="#home">Home</a>
         <a href="#about">About Us</a>
-        <a href="https://www.google.com">Login</a>
+        <a href="https://adminconsole.voidedmc.net">Login</a>
       </div>
       <div class="navbar-toggle" id="nav-toggle">☰</div>
     </div>
