--- a/index.html
+++ b/index.html
@@ -608,5 +608,17 @@
     }, { threshold: 0.1 });
     document.querySelectorAll('.feature-card, .about-section').forEach(el => observer.observe(el));
   </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3581720027198766"
+     crossorigin="anonymous"></script>
+<!-- On homepage -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-3581720027198766"
+     data-ad-slot="5863638486"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
 </html>
