--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <style>
     :root {
-      --primary: #8b5cf6;
-      --primary-dark: #7c3aed;
-      --secondary: #06b6d4;
-      --background: #0a0a0a;
-      --surface: rgba(17, 17, 17, 0.95);
-      --surface-light: rgba(30, 30, 30, 0.9);
+      --primary: #d8b4fe;
+      --primary-dark: #c084fc;
+      --secondary: #f8bbd9;
+      --background: #1a1625;
+      --surface: rgba(45, 35, 55, 0.95);
+      --surface-light: rgba(60, 50, 70, 0.9);
       --text: #ffffff;
-      --text-muted: #a1a1aa;
-      --accent: #f59e0b;
-      --border: rgba(255, 255, 255, 0.1);
-      --glow: rgba(139, 92, 246, 0.3);
-      --success: #10b981;
+      --text-muted: #d1c7d8;
+      --accent: #fbbf24;
+      --border: rgba(255, 255, 255, 0.15);
+      --glow: rgba(216, 180, 254, 0.4);
+      --success: #34d399;
       --gradient: linear-gradient(135deg, var(--primary), var(--secondary));
     }
 
@@ -111,9 +111,9 @@
       width: 100%;
       height: 100%;
       background: 
-        radial-gradient(circle at 20% 80%, rgba(139, 92, 246, 0.05) 0%, transparent 50%),
-        radial-gradient(circle at 80% 20%, rgba(6, 182, 212, 0.05) 0%, transparent 50%),
-        radial-gradient(circle at 40% 40%, rgba(245, 158, 11, 0.03) 0%, transparent 50%);
+        radial-gradient(circle at 20% 80%, rgba(216, 180, 254, 0.08) 0%, transparent 50%),
+        radial-gradient(circle at 80% 20%, rgba(248, 187, 217, 0.08) 0%, transparent 50%),
+        radial-gradient(circle at 40% 40%, rgba(251, 191, 36, 0.05) 0%, transparent 50%);
       z-index: -3;
     }
 
@@ -132,7 +132,7 @@
 
     .navbar.scrolled {
       padding: 0.75rem 0;
-      background: rgba(17, 17, 17, 0.98);
+      background: rgba(45, 35, 55, 0.98);
     }
 
     .navbar-container {
@@ -249,7 +249,7 @@
       width: 120%;
       height: 120%;
       object-fit: cover;
-      opacity: 0.3;
+      opacity: 0.4;
       z-index: -1;
       transform: translate(-50%, -50%);
       will-change: transform;
@@ -258,7 +258,7 @@
     .hero-overlay {
       position: absolute;
       inset: 0;
-      background: rgba(10, 10, 10, 0.6);
+      background: rgba(26, 22, 37, 0.5);
       z-index: 0;
     }
 
@@ -359,7 +359,7 @@
 
     .cta-button:hover {
       transform: translateY(-2px);
-      box-shadow: 0 10px 30px rgba(139, 92, 246, 0.4);
+      box-shadow: 0 10px 30px rgba(216, 180, 254, 0.4);
     }
 
     /* Scroll Indicator */
@@ -412,6 +412,14 @@
     .features-header {
       text-align: center;
       margin-bottom: 4rem;
+      opacity: 0;
+      transform: translateY(30px);
+      transition: all 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .features-header.animate {
+      opacity: 1;
+      transform: translateY(0);
     }
 
     .features-header h2 {
@@ -445,6 +453,13 @@
       text-align: center;
       transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
       backdrop-filter: blur(20px);
+      opacity: 0;
+      transform: translateY(30px);
+    }
+
+    .feature.animate {
+      opacity: 1;
+      transform: translateY(0);
     }
 
     .feature:hover {
@@ -491,6 +506,14 @@
     .about-header {
       text-align: center;
       margin-bottom: 4rem;
+      opacity: 0;
+      transform: translateY(30px);
+      transition: all 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+    }
+
+    .about-header.animate {
+      opacity: 1;
+      transform: translateY(0);
     }
 
     .about-header h2 {
@@ -511,6 +534,14 @@
       backdrop-filter: blur(20px);
       overflow: hidden;
       transition: all 0.3s ease;
+      opacity: 0;
+      transform: translateY(30px);
+    }
+
+    .about-section.animate {
+      opacity: 1;
+      transform: translateY(0);
+      transition: all 0.8s cubic-bezier(0.4, 0, 0.2, 1);
     }
 
     .about-section:hover {
@@ -647,10 +678,6 @@
         opacity: 1;
         transform: translateY(0);
       }
-    }
-
-    .animate {
-      animation: fadeInUp 0.8s ease-out forwards;
     }
 
     /* Responsive Design */
@@ -1058,23 +1085,42 @@
       });
     });
 
-    // Intersection Observer for animations
+    // Enhanced Intersection Observer for smooth animations
     const observerOptions = {
       threshold: 0.1,
       rootMargin: '0px 0px -50px 0px'
     };
 
     const observer = new IntersectionObserver((entries) => {
-      entries.forEach(entry => {
+      entries.forEach((entry, index) => {
         if (entry.isIntersecting) {
-          entry.target.classList.add('animate');
+          // Add staggered delay for feature cards
+          if (entry.target.classList.contains('feature')) {
+            const features = document.querySelectorAll('.feature');
+            const featureIndex = Array.from(features).indexOf(entry.target);
+            setTimeout(() => {
+              entry.target.classList.add('animate');
+            }, featureIndex * 150); // 150ms delay between each feature
+          } 
+          // Add staggered delay for about sections
+          else if (entry.target.classList.contains('about-section')) {
+            const aboutSections = document.querySelectorAll('.about-section');
+            const sectionIndex = Array.from(aboutSections).indexOf(entry.target);
+            setTimeout(() => {
+              entry.target.classList.add('animate');
+            }, sectionIndex * 200); // 200ms delay between each section
+          } 
+          // Immediate animation for headers
+          else {
+            entry.target.classList.add('animate');
+          }
           observer.unobserve(entry.target); // Only animate once
         }
       });
     }, observerOptions);
 
     // Observe elements for animation
-    document.querySelectorAll('.feature, .about-section').forEach(el => {
+    document.querySelectorAll('.features-header, .feature, .about-header, .about-section').forEach(el => {
       observer.observe(el);
     });
 
